# mdmind

./: .backlog.md.mdmind-locations.json  .backlog.md.mdmind-session.json  .decision-log.md.mdmind-locations.json  .decision-log.md.mdmind-session.json  .friends.md.mdmind-locations.json  .friends.md.mdmind-session.json  .gitignore  .mdmind-product-strategy.md.mdmind-locations.json  .mdmind-product-strategy.md.mdmind-session.json  .mdmind-product-strategy.md.mdmind-ui.json  .mind.md.mdmind-locations.json  .mind.md.mdmind-session.json  .mymdmindproduct.md.mdmind-locations.json  .mymdmindproduct.md.mdmind-session.json  .product.md.mdmind-locations.json  .product.md.mdmind-session.json  Cargo.toml  DEVELOPER.md  README.md  friends.md
.claude-plugin/: marketplace.json
docs/: AGENTS_SNIPPET.md  AGENT_CLI_CONTRACT.md  AGENT_SKILL_INSTALLS.md  AGENT_TODO_MEMORY.md  AGENT_USAGE.md  CLI_HELP_AND_COMPLETIONS.md  CODEX_KICKOFF.md  COMMAND_PALETTE.md  CROSS_LINKS_AND_BACKLINKS.md  DEEP_LINK_FALLBACK.md  DESIGN.md  DOCUMENTATION_STRATEGY.md  EXPORT_TARGETS.md  FOCUSED_VIEWS.md  FORMAT.md  FUTURE_FEATURES.md  IDS_AND_DEEP_LINKS.md  IMPORT_AND_INGESTION.md  INSTALL_AND_RELEASE.md  LLM_WIKI_MINDSPACE_STRATEGY.md  NODE_DETAILS.md  PALETTE_AND_HELP.md  PHASE1_UX_IMPLEMENTATION.md  QUERY_LANGUAGE.md  README.md  RELATIONS_AND_BACKLINKS.md  RELEASING.md  ROADMAP.md  SAFETY_AND_HISTORY.md  SAVED_FILTERS.md  SKILLS.md  SKILLS_CUSTOMIZING.md  SKILL_EVAL_HARNESS.md  SPATIAL_CANVAS.md  TEMPLATES.md  TEMPLATE_VARIABLES.md  TERMINAL_EXPERIENCE.md  TUI_WORKFLOWS.md  USER_GUIDE.md  (+3 more)
examples/: demo.md  (+40 more)
(+163 files in other folders)
